[gd_scene load_steps=17 format=3 uid="uid://ch86f1uwaikjy"]

[ext_resource type="Script" path="res://main.gd" id="1_4adpl"]
[ext_resource type="PackedScene" uid="uid://dgtre55fv4qm1" path="res://ui/AddButton.tscn" id="1_h6nhb"]
[ext_resource type="Script" path="res://tutorial.gd" id="2_d0nos"]
[ext_resource type="PackedScene" uid="uid://b3kxv3m3kqw6b" path="res://ui/writable_dialog.tscn" id="2_f65jh"]
[ext_resource type="Texture2D" uid="uid://cpg5luxdqg8l" path="res://assets/icons/save.png" id="2_g8ohw"]
[ext_resource type="PackedScene" uid="uid://dd8gd32amx4ql" path="res://utils/color_manager.tscn" id="2_j6bn2"]
[ext_resource type="PackedScene" uid="uid://b2iyco0sfmy2f" path="res://ui/sound_button.tscn" id="2_kqbtn"]
[ext_resource type="Script" path="res://ui/bg.gd" id="2_krwko"]
[ext_resource type="Texture2D" uid="uid://gcm0yaac58ei" path="res://assets/icons/cross.png" id="3_oroov"]
[ext_resource type="PackedScene" uid="uid://6cyx6ald7r3t" path="res://circle/view/circle_manager.tscn" id="4_3ij8m"]
[ext_resource type="Texture2D" uid="uid://qsdj4xnrp1qr" path="res://assets/icons/information.png" id="4_cjxov"]
[ext_resource type="Script" path="res://ui/screenshot_tooltip_manager.gd" id="5_0nf8d"]
[ext_resource type="PackedScene" uid="uid://cqvfw57vmu3jf" path="res://screenshot/screenshot_tooltip.tscn" id="6_7tlyh"]
[ext_resource type="PackedScene" uid="uid://c8ks3p3lxhuul" path="res://screenshot/save_screenshot.tscn" id="6_ky4er"]
[ext_resource type="PackedScene" uid="uid://cb5hfup1d75tj" path="res://camera/player_camera.tscn" id="8_47et2"]
[ext_resource type="AudioStream" uid="uid://drnsrjpajw1f" path="res://assets/Do - Fa interestelar.mp3" id="8_e71v0"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4adpl")

[node name="Tutorial" type="CanvasLayer" parent="."]

[node name="Tutorial" type="Control" parent="Tutorial"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_d0nos")

[node name="BG" type="ColorRect" parent="Tutorial/Tutorial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.870588)

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial/Tutorial/BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="How to play" type="RichTextLabel" parent="Tutorial/Tutorial/BG/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]How to play[/center]
"
fit_content = true

[node name="how to play text" type="RichTextLabel" parent="Tutorial/Tutorial/BG/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "We are the choices we make. Reflect on your journey so far, and write down the layers of your personal story."
fit_content = true

[node name="Controls" type="RichTextLabel" parent="Tutorial/Tutorial/BG/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Controls[/center]
"
fit_content = true

[node name="Controls text" type="RichTextLabel" parent="Tutorial/Tutorial/BG/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "Click the character to add a new layer to your story.
Zoom in and out with the scroll wheel.
Press tab to see what you have written so far."
fit_content = true

[node name="Controls2" type="RichTextLabel" parent="Tutorial/Tutorial/BG/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Screenshots[/center]
"
fit_content = true

[node name="Controls text2" type="RichTextLabel" parent="Tutorial/Tutorial/BG/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "Use the \"save\" button in the top right corner to take a screenshot of your journey and share it with your friends!"
fit_content = true

[node name="Button" type="Button" parent="Tutorial/Tutorial/BG"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
icon = ExtResource("3_oroov")
flat = true
icon_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -78.0
offset_top = 16.0
grow_horizontal = 0
grow_vertical = 2

[node name="Screenshot" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Take a screenshot"
icon = ExtResource("2_g8ohw")
flat = true
icon_alignment = 1

[node name="TutorialBtn" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_cjxov")
flat = true
icon_alignment = 1

[node name="SoundButton" parent="CanvasLayer/VBoxContainer" instance=ExtResource("2_kqbtn")]
layout_mode = 2
tooltip_text = "Enable or disable the audio"

[node name="MainViewport" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="MainViewport"]
disable_3d = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="BG" type="SubViewportContainer" parent="MainViewport/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="MainViewport/SubViewport/BG"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="BG" type="ColorRect" parent="MainViewport/SubViewport/BG/SubViewport"]
z_index = -4096
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145533, 0.29925, 0.524508, 1)
script = ExtResource("2_krwko")

[node name="Camera2D" type="Camera2D" parent="MainViewport/SubViewport/BG/SubViewport"]
position = Vector2(576, 324)

[node name="Circles" type="SubViewportContainer" parent="MainViewport/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="MainViewport/SubViewport/Circles"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="PlayerCamera" parent="MainViewport/SubViewport/Circles/SubViewport" instance=ExtResource("8_47et2")]

[node name="CircleManager" parent="MainViewport/SubViewport/Circles/SubViewport" node_paths=PackedStringArray("color_manager") instance=ExtResource("4_3ij8m")]
offset_top = -8.0
offset_bottom = -8.0
color_manager = NodePath("../../../../../ColorManager")

[node name="ScreenshotTooltipManager" type="Control" parent="MainViewport/SubViewport/Circles/SubViewport" node_paths=PackedStringArray("circle_manager")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_0nf8d")
tooltip_scene = ExtResource("6_7tlyh")
circle_manager = NodePath("../CircleManager")

[node name="AddButton" type="SubViewportContainer" parent="MainViewport/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="MainViewport/SubViewport/AddButton"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="MainViewport/SubViewport/AddButton/SubViewport"]
position = Vector2(576, 324)

[node name="AddButton" parent="MainViewport/SubViewport/AddButton/SubViewport" instance=ExtResource("1_h6nhb")]
z_index = 10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -40.0
offset_right = 28.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Camera2D" type="Camera2D" parent="MainViewport"]
position = Vector2(576, 324)

[node name="ColorManager" parent="." instance=ExtResource("2_j6bn2")]

[node name="ConfirmationDialog" parent="." instance=ExtResource("2_f65jh")]
titles = Array[String](["What are you proud of?", "What was a difficult decision you made?", "What's a good memory you have?", "Is there something you would take back?", "Have you inspired someone?", "Talk about someone that inspired you", "Something that you are grateful for", "Something that you want to change"])

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_e71v0")
autoplay = true

[node name="SaveScreenshot" parent="." node_paths=PackedStringArray("viewport", "screenshot_tooltip_manager") instance=ExtResource("6_ky4er")]
viewport = NodePath("../MainViewport/SubViewport")
screenshot_tooltip_manager = NodePath("../MainViewport/SubViewport/Circles/SubViewport/ScreenshotTooltipManager")

[connection signal="pressed" from="Tutorial/Tutorial/BG/Button" to="Tutorial/Tutorial" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Screenshot" to="SaveScreenshot" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/TutorialBtn" to="Tutorial/Tutorial" method="_on_tutorial_btn_pressed"]
[connection signal="circle_created" from="MainViewport/SubViewport/Circles/SubViewport/CircleManager" to="MainViewport/SubViewport/BG/SubViewport/BG" method="_on_circle_manager_circle_created"]
[connection signal="pressed" from="MainViewport/SubViewport/AddButton/SubViewport/AddButton" to="." method="_on_button_pressed"]
[connection signal="text_confirmed" from="ConfirmationDialog" to="MainViewport/SubViewport/Circles/SubViewport/CircleManager" method="_on_confirmation_dialog_text_confirmed"]
